// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button Component Snapshot Tests matches snapshot for disabled button 1`] = `
<button
  aria-busy="false"
  class="button primary medium"
  disabled=""
  type="button"
>
  Disabled
</button>
`;

exports[`Button Component Snapshot Tests matches snapshot for large success button 1`] = `
<button
  aria-busy="false"
  class="button success large"
  type="button"
>
  Large Success
</button>
`;

exports[`Button Component Snapshot Tests matches snapshot for loading button 1`] = `
<button
  aria-busy="true"
  class="button primary medium loading"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="spinner"
  />
  <span
    class="loadingText"
  >
    Loading...
  </span>
</button>
`;

exports[`Button Component Snapshot Tests matches snapshot for primary button 1`] = `
<button
  aria-busy="false"
  class="button primary medium"
  type="button"
>
  Primary Button
</button>
`;
